--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.19",
     "i18next": "^23.4.5",
     "i18next-browser-languagedetector": "^7.1.0",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@types/lodash": "^4.14.197",
     "@types/react-datepicker": "^4.15.0",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
